# attention-gradient

./: README.md  attention.py  pyproject.toml  requirements.txt  test_attention.py
